--- a/config/feign-consumer/application-dev.properties
+++ b/config/feign-consumer/application-dev.properties
@@ -1,1 +1,12 @@
-from=feign-dev1.0
+from=feign-dev1024
+
+management.endpoints.web.exposure.include=*
+hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=1000
+service-hello.ribbon.ConnectTimeout=500
+service-hello.ribbon.ReadTimeout=2000
+service-hello.ribbon.OkToRetryOnAllOperations=true
+service-hello.ribbon.MaxAutoRetriesNextServer=2
+service-hello.ribbon.MaxAutoRetrues=1
+feign.hystrix.enabled=true
+feign.compression.request.enabled=true
+logging.level.com.springcloud.feignconsumer.feign.HelloService=DEBUG
